--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -23,15 +23,68 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [02/May/2021 19:07:11] \"\u001b[32mPOST /adminSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [02/May/2021 19:07:11] \"\u001b[37mGET /adminApp?id=608d57605786bd50bed6cb23 HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [02/May/2021 23:58:12] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/May/2021 23:58:12] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "[2021-05-02 23:58:15,166] ERROR in app: Exception on / [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 2446, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1951, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1820, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1949, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1935, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-1-9455182ebf1c>\", line 101, in appList\n",
+      "    if i[i2] == \"on\":\n",
+      "KeyError: 'spisok'\n",
+      "127.0.0.1 - - [02/May/2021 23:58:15] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
+      "[2021-05-02 23:58:17,484] ERROR in app: Exception on / [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 2446, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1951, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1820, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1949, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1935, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-1-9455182ebf1c>\", line 101, in appList\n",
+      "    if i[i2] == \"on\":\n",
+      "KeyError: 'spisok'\n",
+      "127.0.0.1 - - [02/May/2021 23:58:17] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [03/May/2021 00:00:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:00:09] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:09] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:09] \"\u001b[37mGET /secretKey?link_id=608f1351b59c6f34109189da HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:25] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:33] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:36] \"\u001b[37mGET /adminApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:43] \"\u001b[32mPOST /adminSave HTTP/1.1\u001b[0m\" 302 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ImmutableMultiDict([('appID', '608d57605786bd50bed6cb23'), ('name', 'Блокнот'), ('devName', 'Иванов И.И.'), ('email', 'example@site.com'), ('appDesc', 'Приложение для редактирования и создания текстовых файлов'), ('spisok', 'off'), ('read', 'on'), ('write', 'on'), ('delete', 'off'), ('adminPassword', 'ADMIN_PASSWORD')])\n"
+      "ImmutableMultiDict([('appID', '608f1351b59c6f34109189d9'), ('name', 'Блокнот'), ('devName', 'Носко М.М.'), ('email', 'maxnosko@mail.ru'), ('appDesc', 'Приложение для работы с текстовыми файлами'), ('spisok', 'off'), ('read', 'on'), ('write', 'on'), ('delete', 'off'), ('adminPassword', 'ADMIN_PASSWORD')])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 00:02:43] \"\u001b[37mGET /adminApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:44] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 00:02:46] \"\u001b[37mGET /adminApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -614,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
